# droas-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NFR-001-brownfield-validation-report.md  README.md  clippy.toml  rustfmt.toml  verify_nfr_001.py
.claude/commands/: sunnycore_pm.md  sunnycore_po.md  sunnycore_qa.md
.github/workflows/: ci.yml
archive/0.1.0/: cutover-fixes-dev-notes.md  cutover.md  epic.md  progress.md
archive/0.2.0/: PRD.md  cutover-fixes-dev-notes.md  cutover.md  prd-dev-notes.md  progress.md
archive/0.2.4/: PRD.md  cutover-fixes-dev-notes.md  cutover.md  prd-dev-notes.md
docs/: architecture.md  completion-report.md  epic.md  progress.md  requirements.md  tasks.md
docs/architecture/: API Documentation.md  API 文檔.md  Appendices.md  Architecture Decisions.md  Architecture Diagram.md  Architecture Quality.md  Cross-Cutting Concerns.md  Data architecture.md  Database design.md  Deployment Architecture.md  Deployment architecture.md  Executive Summary.md  Executive summary.md  Functional Requirements Architecture.md  Functional requirements architecture.md  Implementation roadmap.md  Non-functional Requirements Architecture.md  Non-functional requirements architecture.md  Project Metadata.md  Quality Attributes.md  Requirements Traceability.md  Risk assessment.md  Source References.md  System Architecture.md  System Overview.md  System architecture.md  System overview.md  Technical Stack.md  Technical stack.md  來源參考.md  執行摘要.md  實作元件.md  實施路線圖 (Implementation Roadmap).md  實際技術堆疊.md  專案概述.md  工作目錄結構.md  技術堆疊.md  架構圖.md  架構圖表.md  架構決策記錄 (ADR).md  (+16 more)
docs/dev-notes/: 1-dev-notes.md  2-dev-notes.md  3-dev-notes.md  4-dev-notes.md  CORE-001-dev-notes.md  CORE-002-dev-notes.md  CORE-003-dev-notes.md  CORE-004-dev-notes.md  CORE-005-dev-notes.md  INFRA-001-dev-notes.md  INFRA-002-dev-notes.md  NFR-001-dev-notes.md
docs/implementation-plan/: 1-plan.md  2-plan.md  3-plan.md  4-plan.md  5-plan.md  6-plan.md  7-plan.md  8-plan.md  9-plan.md  CORE-001-plan.md  CORE-002-plan.md  CORE-003-plan.md  CORE-004-plan.md  CORE-005-plan.md  INFRA-001-plan.md  INFRA-002-plan.md  NFR-001-plan.md  NFR-002-plan.md
docs/knowledge/: best-practices-api-performance.md  best-practices-architecture.md  best-practices-concurrency.md  best-practices-discord-help-system.md  best-practices-discord-integration.md  best-practices-security.md  best-practices-testing.md  errors-admin-service.md  errors-architecture.md  errors-compilation.md  errors-configuration.md  errors-deployment.md  errors-development.md  errors-discord-commands.md  errors-testing.md  problem-solving-service-initialization.md  sync_member_permission_fix.md
migrations/: 001_create_config_tables.sql
src/: command_router.rs  config.rs  error.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs
tests/: adjust_balance_command_test.rs  admin_audit_service_test.rs  admin_integration_test.rs  admin_non_functional_test.rs  admin_security_control_test.rs  admin_service_test.rs  automatic_member_account_creation_test.rs  balance_service_test.rs  bot_lifecycle_tests.rs  bot_manager_tests.rs  button_integration_test.rs  cache_basic_test.rs  cache_integration_test.rs  cache_performance_test.rs  ci_tests.rs  command_router_integration_test.rs  command_router_test.rs  config_tests.rs  cutover_fixes_simple_test.rs  cutover_fixes_test.rs  cutover_health_check_test.rs  cutover_issues_test.rs  cutover_timezone_test.rs  database_schema_test.rs  database_unit_test.rs  discord_gateway_modules_test.rs  discord_gateway_test.rs  error_handling_test.rs  event_handler_test.rs  help_service_test.rs  hot_reload_tests.rs  integration_discord.rs  integration_tests.rs  load_test.rs  mock_repositories.rs  mod.rs  monitoring_service_test.rs  nfr_tests.rs  non_functional_requirements_test.rs  pattern_recognition_tests.rs  (+17 more)
(+189 files in other folders)
