[package]
name = "droas-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
regex = "1.10"
notify = "6.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
lru = "0.12"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.9"

[lib]
name = "droas_bot"
path = "src/lib.rs"

[[bin]]
name = "droas-bot"
path = "src/main.rs"
