[package]
name = "droas-bot"
version = "0.1.0"
edition = "2021"
description = "Discord Rust歡迎機器人 - 為新成員提供個性化歡迎體驗"
authors = ["DROAS Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-org/droas-bot"

[dependencies]
# Discord API
serenity = { version = "0.11", features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"] }

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs", "process", "signal"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Image processing
image = { version = "0.24", features = ["png", "jpeg"] }
imageproc = "0.23"
rusttype = "0.9"

# HTTP client for fetching avatars and images
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"

# Configuration and environment
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Utility
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Async trait support
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
futures = "0.3"

[lib]
name = "droas_bot"
path = "src/lib.rs"

[[bin]]
name = "droas-bot"
path = "src/main.rs"
