[package]
name = "droas-bot"
version = "0.2.2"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "signal"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.32", features = ["tokio-pg"] }
bigdecimal = { version = "0.3", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
redis = { version = "0.23", features = ["tokio-comp"] }
warp = { version = "0.3", features = ["tls"] }
prometheus = { version = "0.13", optional = true }
toml = "0.8"

[features]
default = []
monitoring = ["prometheus"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
warp = { version = "0.3", features = ["tls"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
fastrand = "2.0"